--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "boxicons": "^2.1.4",
+    "flatpickr": "^4.6.13",
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
+    "react-clock": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-scroll": "^1.9.0",
+    "react-time-picker": "^7.0.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
