--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.3",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.6",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
