--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-clock": "^5.1.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.10.0",
     "react-slick": "^0.30.3",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.6",
